# rust-zero-to-prod

./: Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yml  spec.yaml  spec.yml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20211125020634_create_subscriptions_table.sql  20220310195100_make_status_not_null_in_subscriptions.sql  20220310195456_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health.rs  health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
