[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.4", features = ["json"] }
config = "0.11.0"
tide-sqlx = "0.6.1"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["serde", "v4" ] }
tide-tracing = "0.0.11"
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1.2", features = ["env_logger"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
async-trait = "0.1.52"
serde-aux = "3"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.14"

[dependencies.sqlx]
version = "0.5.7"
features = [
  "runtime-async-std-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"